Mindbox service fixes

--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "require": {
       "php" : "^7.1",
       "drewm/mailchimp-api": "^2.5",
-      "inetstudio/admin-panel": "1.6.*",
-      "mailgun/mailgun-php": "^2.4"
+      "inetstudio/admin-panel": "1.6.*"
     },
     "autoload": {
       "psr-4": {
